Project

General

Profile

Actions

Bug #13688

closed

Thread overflow hangs ruby (not responding ^C)

Bug #13688: Thread overflow hangs ruby (not responding ^C)

Added by shyouhei (Shyouhei Urabe) almost 9 years ago. Updated over 6 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.0dev (2017-06-27 trunk 59183) [x86_64-darwin15]
[ruby-core:81801]

Description

Passing the attached file makes hang.


Files

hang.rb (33 Bytes) hang.rb shyouhei (Shyouhei Urabe), 06/28/2017 03:50 AM
thread-hang-13688.patch (2.24 KB) thread-hang-13688.patch jeremyevans0 (Jeremy Evans), 08/25/2019 07:17 PM

Updated by jeremyevans0 (Jeremy Evans) over 6 years ago Actions #1 [ruby-core:94547]

This bug still occurs in the master branch. Attached is a patch that fixes it by checking for interrupts before calling the thread's proc.

Updated by jeremyevans (Jeremy Evans) over 6 years ago Actions #2

  • Status changed from Open to Closed

Applied in changeset git|5c2c3966851ed074eb468ad36d8d75e53b8eab6c.


Check interrupts before starting thread

Fixes a hang when Thread.new calls Thread.new in a loop.

Fixes [Bug #13688]

Actions

Also available in: PDF Atom