Check interrupts before starting thread

Fixes a hang when Thread.new calls Thread.new in a loop.

Fixes [Bug #13688]